:lipstick: Layout Index Co-authored-by: Julliana Samora <juusamora@gmail.com>

--- a/src/app/index/index.component.html
+++ b/src/app/index/index.component.html
@@ -1,1 +1,26 @@
-<p>index works!</p>
+<div class="group">
+    <section>
+        <div class="card">
+            <div class="photo ana"></div>
+            <h2>Ana Balan</h2>
+            <a href="https://github.com/anabalan">Ver perfil no github</a>
+        </div>
+        <div class="description">
+            <h1>ANA BALAN</h1>
+            <p>Desenvolvedora Front-end e Designer UX/UI. Busco trazer arte ao desenvolvimento. </p>
+        </div>
+    </section>
+    <section>
+        <div class="description" id="name">
+            <h1>JULLIANA SAMORA</h1>
+            <p>Desenvolvedora Front-end e Designer UX/UI. Busco trazer arte ao desenvolvimento. </p>
+        </div>
+        <div class="card">
+            <div class="photo ju"></div>
+            <h2>Julliana Samora</h2>
+            <a href="https://github.com/anabalan">Ver perfil no github</a>
+        </div>
+    </section>
+</div>
+
+
