:lipstick: Layout Bitcoin Co-authored-by: Julliana Samora <juusamora@gmail.com>

--- a/src/app/bitcoin/bitcoin.component.html
+++ b/src/app/bitcoin/bitcoin.component.html
@@ -1,1 +1,43 @@
-<p>bitcoin works!</p>
+<section>
+    <h1>Bitcoin</h1>
+    <p class="att-bitcoin">Última atualização:</p>
+    <div class="container-bitcoin">
+        <div class="img-bitcoin">
+            <img src="/assets/img/bitcoin.png">
+        </div>
+        <div class="cotacao">
+            <!-- Card de cotação Real -->
+            <div class="bitcoin-cotacao real">
+                <p>REAL</p>
+                <p class="valor">R$</p>
+            </div>
+            <!-- Card de cotação Dólar -->
+            <div class="bitcoin-cotacao dolar">
+                <p>DÓLAR</p>
+                <p class="valor">$</p>
+            </div> 
+        </div>
+    </div>
+    <div class="container-bitcoin container-currency">
+
+        <h2>Histórico</h2>
+
+        <div class="currency">
+            <div class="dados-currency">
+                <p>Valor em real: </p>
+                <p>Valor em Dólar: </p>
+                <p>Porcentagem: </p>
+                <p>Data: </p>
+            </div>
+
+            <div class="dados-currency dados">
+                <p>aa</p>
+                <p>aa</p>
+                <p>aa</p>
+                <p>aa</p>
+            </div>
+            
+        </div>
+    </div>
+</section>
+
