:camera_flash: Adicionando imagens Co-authored-by: samoraju <juusamora@gmail.com>

--- a/src/app/index/index.component.css
+++ b/src/app/index/index.component.css
@@ -46,6 +46,12 @@ section {
     background-size: cover;
 }
 
+.ju {
+    background-image: url(/assets/img/ju.png);
+    background-position: center;
+    background-size: cover;
+}
+
 
 h2 {
     width: 100%;
