:camera_flash: Imagem bitcoin Co-authored-by: samoraju <juusamora@gmail.com>

--- a/src/app/bitcoin/bitcoin.component.html
+++ b/src/app/bitcoin/bitcoin.component.html
@@ -3,7 +3,7 @@
     <p class="att-bitcoin">Última atualização:</p>
     <div class="container-bitcoin">
         <div class="img-bitcoin">
-            <img src="/assets/img/bitcoin.png">
+            <img src="/assets/img/bitcoin2.png">
         </div>
         <div class="cotacao">
             <!-- Card de cotação Real -->
