:lipstick: Layout mercado Co-authored-by: samoraju <juusamora@gmail.com>

--- a/src/app/mercado/mercado.component.html
+++ b/src/app/mercado/mercado.component.html
@@ -1,1 +1,41 @@
-<p>mercado works!</p>
+<section>
+    <h1>Bitcoin</h1>
+    <div class="card">
+        <h2>Comprar</h2>
+        <p>Você tem R$ </p>
+        <form action="/action_page.php">
+            <input type="text" id="currency-br" name="currency-br" placeholder="Digite a quantidade em R$">
+            <input class="button" type="submit" value="enviar">
+            </form>
+    </div>
+
+    <div class="card">
+        <h2>Vender</h2>
+        <p>Você tem  __ Bitcoin </p>
+        <form action="/action_page.php">
+            <input type="text" id="currency-bitcoin" name="currency-bitcoin" placeholder="Digite a quantidade em Bitcoin">
+            <input class="button" type="submit" value="enviar">
+            </form>
+    </div>
+
+    <!-- Histórico -->
+    <div class="history">
+        <h2>Histórico</h2>
+        <div class="currency">
+            <div class="dados-currency">
+                <p>Valor em real: </p>
+                <p>Valor em Dólar: </p>
+                <p>Porcentagem: </p>
+                <p>Data: </p>
+            </div>
+
+            <div class="dados-currency dados">
+                <p>aa</p>
+                <p>aa</p>
+                <p>aa</p>
+                <p>aa</p>
+            </div>
+        </div>
+    </div>
+
+</section>
