--- a/src/app/bitcoin/bitcoin.component.html
+++ b/src/app/bitcoin/bitcoin.component.html
@@ -1,6 +1,6 @@
 <section>
     <h1>Bitcoin</h1>
-    <p class="att-bitcoin">Última atualização:</p>
+    <p class="att-bitcoin">Última atualização: </p>
     <div class="container-bitcoin">
         <div class="img-bitcoin">
             <img src="/assets/img/bitcoin2.png">
@@ -9,12 +9,12 @@
             <!-- Card de cotação Real -->
             <div class="bitcoin-cotacao real">
                 <p>REAL</p>
-                <p class="valor">R$ {{ this.bitcoins.bpi.BRL.rate}}</p>
+                <p class="valor">{{ this.bitcoinService.getCurrentCurrency_brl() | currency:'BRL' }}</p>
             </div>
             <!-- Card de cotação Dólar -->
             <div class="bitcoin-cotacao dolar">
                 <p>DÓLAR</p>
-                <p class="valor">$ {{ this.bitcoins.bpi.USD.rate }}</p>
+                <p class="valor">USD {{ this.bitcoinService.getCurrentCurrency_usd() | currency:'USD' }}</p>
             </div> 
         </div>
     </div>
@@ -22,22 +22,20 @@
 
         <h2>Histórico</h2>
 
-        <div class="currency">
+        <div class="currency" *ngFor="let bitcoin of this.bitcoinService.getBitcoinHistory();">
             <div class="dados-currency">
-                <p>Valor em real: </p>
+                <p>Valor em Real: </p>
                 <p>Valor em Dólar: </p>
-                <p>Porcentagem: </p>
                 <p>Data: </p>
             </div>
 
             <div class="dados-currency dados">
-                <p>aa</p>
-                <p>aa</p>
-                <p>aa</p>
-                <p>aa</p>
+                <p>{{bitcoin.bpi.BRL.rate_float | currency:'BRL'}}</p>
+                <p>{{bitcoin.bpi.BRL.rate_float | currency:'USD'}}</p>
+                <p>{{bitcoin.time.updated | date:'dd/MM/yyyy HH:mm:ss'}}</p>
             </div>
-            
         </div>
+
     </div>
 </section>
 
