:lipstick: Correção layout
Co-authored-by: Julliana Samora <juusamora@gmail.com>

--- a/src/app/bitcoin/bitcoin.component.html
+++ b/src/app/bitcoin/bitcoin.component.html
@@ -1,6 +1,6 @@
 <section>
     <h1>Bitcoin</h1>
-    <p class="att-bitcoin">Última atualização: </p>
+    <!-- <p class="att-bitcoin">Última atualização: </p> -->
     <div class="container-bitcoin">
         <div class="img-bitcoin">
             <img src="/assets/img/bitcoin2.png">
