--- a/src/app/mercado/mercado.component.css
+++ b/src/app/mercado/mercado.component.css
@@ -41,19 +41,9 @@ h1::before {
 h2 {
     width: 100%;
     font-size: 20px;
+    text-align: center;
     text-transform: uppercase;
     position: relative;
-}
-
-h2::before {
-    content: "";
-    position: absolute;
-    bottom: -10px;
-    margin: 0 auto;
-    display: block;
-    background-color: #FE5D93;
-    width: 40px;
-    height: 3px;
 }
 
 form {
@@ -96,7 +86,7 @@ input {
 
 p {
     width: 100%;
-    text-align: left;
+    text-align: center;
     margin-top: 15px;
 }
 
