--- a/src/app/mercado/mercado.component.html
+++ b/src/app/mercado/mercado.component.html
@@ -1,5 +1,5 @@
 <section>
-    <h1>Bitcoin</h1>
+    <h1>Mercado</h1>
     <div class="card">
         <h2>Comprar</h2>
         <p>Você tem R$ </p>
@@ -23,15 +23,11 @@
         <h2>Histórico</h2>
         <div class="currency">
             <div class="dados-currency">
-                <p>Valor em real: </p>
-                <p>Valor em Dólar: </p>
-                <p>Porcentagem: </p>
-                <p>Data: </p>
+                <p>Bitcoin: </p>
+                <p>Data da transação: </p>
             </div>
 
             <div class="dados-currency dados">
-                <p>aa</p>
-                <p>aa</p>
                 <p>aa</p>
                 <p>aa</p>
             </div>
