:lipstick: Correção texto
Co-authored-by: Julliana Samora <juusamora@gmail.com>

--- a/src/app/index/index.component.html
+++ b/src/app/index/index.component.html
@@ -13,7 +13,7 @@
     <section>
         <div class="description" id="name">
             <h1>JULLIANA SAMORA</h1>
-            <p>Desenvolvedora Front-end e Designer UX/UI. Busco trazer arte ao desenvolvimento. </p>
+            <p>Web designer Jr, desenvolvedora front-end e entusiasta do design UI/UX. </p>
         </div>
         <div class="card">
             <div class="photo ju"></div>
