--- a/src/app/mercado/mercado.component.html
+++ b/src/app/mercado/mercado.component.html
@@ -28,8 +28,8 @@
             </div>
 
             <div class="dados-currency dados">
-                <p>aa</p>
-                <p>aa</p>
+                <p>Lorem ipsum</p>
+                <p>Lorem ispum</p>
             </div>
         </div>
     </div>
