:lipstick: Correção links
Co-authored-by: Julliana Samora <juusamora@gmail.com>

--- a/src/app/index/index.component.html
+++ b/src/app/index/index.component.html
@@ -18,7 +18,7 @@
         <div class="card">
             <div class="photo ju"></div>
             <h2>Julliana Samora</h2>
-            <a href="https://github.com/anabalan">Ver perfil no github</a>
+            <a href="https://github.com/samoraju">Ver perfil no github</a>
         </div>
     </section>
 </div>
